# helf

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  DEPLOYMENT.md  DESIGN_FIXES.md  DESIGN_SYSTEM.md  Dockerfile  IMPLEMENTATION_STATUS.md  LICENSE  README.md  REFACTORING_PLAN.md  SQL_MIGRATION.md  body_composition_data.py  docker-compose.yml  generate_wendler_progression.py  mqtt_service.py  pyproject.toml  run.py  test_workout_data.py  upcoming_workouts.csv  upcoming_workouts.csv.bak  workout_data.py  workout_tracker.py  workouts.csv
.claude/: settings.local.json
.opencode/: settings.local.json
.opencode/agents/: frontend-design.md  frontend-polish-expert.md
.opencode/plan/: LIFTOSCRIPT_REFACTOR.md  LIFTOSCRIPT_UPCOMING.md
.opencode/specs/: IMPLEMENTATION_STATUS.md  LIFTOSCRIPT_BASIC.md
app/: __init__.py  body_composition_data.py  generate_wendler_progression.py  mqtt_service.py  workout_data.py  workout_tracker.py
backend/: README.md  generate_exercises.py  generate_test_data.py  pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/api/: body_comp.py  exercises.py  progression.py  upcoming.py  workouts.py
backend/app/db/: __init__.py  models.py
backend/app/models/: body_composition.py  exercise.py  progression.py  upcoming.py  workout.py
backend/app/presets/: cutting_rotation.liftoscript  stronglifts_5x5.liftoscript  wendler_531.liftoscript
backend/app/repositories/: body_comp_repo.py  exercise_repo.py  upcoming_repo.py  workout_repo.py
backend/app/services/: liftoscript_service.py  mqtt_service.py  progression_service.py  wendler_service.py
backend/app/utils/: calculations.py  date_helpers.py
backend/migrations/: add_exercise_notes.py  csv_to_tinydb.py  tinydb_to_sqlite.py
backend/tests/: conftest.py  test_api_body_comp.py  test_api_exercises.py  test_api_progression.py  test_api_upcoming.py  test_api_workouts.py  test_config.py  test_migration_script.py  test_repositories_body_comp.py  test_repositories_exercise.py  test_repositories_upcoming.py  test_repositories_workout.py  test_services_liftoscript.py  test_services_mqtt.py  test_services_progression.py  test_services_wendler.py  test_utils.py  test_utils_date_helpers.py
data/: .gitkeep  helf.json
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
tests/: test_workout_data.py
(+32 files in other folders)
